Fixed regression introduced by 8190573abe27cc70cfa46c4eb435d3a7912aa664 - whitespace-only spans no longer collapse to zero width.

--- a/index.css
+++ b/index.css
@@ -71,6 +71,7 @@ body, #video {
 
 #subs-wrapper span {
 	display: inline-block;
+	white-space: pre-wrap;
 }
 
 #dpi-div {
